<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FreeOTP</string>
    <string name="add">Add</string>
    <string name="invalid_token">The token specified was invalid!</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="restore_defaults">Restore Defaults</string>
    <string name="no_keys">No OTP keys installed.</string>
    <string name="add_token">Add Token</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="interval">Interval</string>
    <string name="counter">Counter</string>
    <string name="issuer">Issuer</string>
    <string name="id">ID</string>
    <string name="secret">Secret</string>
    <string name="type">Type</string>
    <string name="algorithm">Algorithm</string>
    <string name="digits">Digits</string>
    <string name="save">Save</string>
    <string name="code_copied">Code copied to clipboard.</string>

    <string name="about_freeotp">About FreeOTP</string>
    <string name="about_version">FreeOTP Version %1$s (%2$d)</string>
    <string name="about_copyright">© 2013 - Red Hat, Inc., et al.</string>
    <string name="about_license">FreeOTP is licensed under %1$s.</string>
    <string name="about_website">For more information, see our %s.</string>
    <string name="about_icons">Some icons used by this application are reproduced from work created and shared by the Android Open Source Project and used according to terms described in the Creative Commons 2.5 Attribution License.</string>

    <string name="link_website">&lt;a href=&quot;http://freeotp.github.io&quot;&gt;website&lt;/a&gt;</string>
    <string name="link_apache2">&lt;a href=&quot;http://www.apache.org/licenses/LICENSE-2.0.html&quot;&gt;Apache 2.0&lt;/a&gt;</string>

    <string name="error_camera_open">Error while opening camera!</string>

    <string name="delete_summary">This is your last chance: if you delete this token, it will be gone forever. It will not be disabled on the server.</string>
    <string name="delete_question">Delete this token?</string>

    <string-array name="algorithms">
        <item>MD5</item>
        <item>SHA1</item>
        <item>SHA256</item>
        <item>SHA512</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_preference">Preferences</string>
    <string name="preferences">Settings</string>
</resources>
